Fixed various components

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,49 +8,52 @@
         <meta name="Description" content="Personal Website">
         <meta name="author" content="Akshant Jain">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
-        <link rel="stylesheet" type="text/css" href="icons.css">
-        <link rel="stylesheet" type="text/css" href="navigation.css">
-        <link rel="stylesheet" type="text/css" href="dropdown.css">
-        <link rel="stylesheet" type="text/css" href="template.css">
-        <link rel="stylesheet" type="text/css" href="content.css">
+
+        <!-- Various links to the websites and CSS files -->
+        <link rel="stylesheet" type="text/css" href="../styles/mystyle.css">
+        <link rel="stylesheet" type="text/css" href="../styles/icons.css">
+        <link rel="stylesheet" type="text/css" href="../styles/navigation.css">
+        <link rel="stylesheet" type="text/css" href="../styles/dropdown.css">
+        <link rel="stylesheet" type="text/css" href="../styles/template.css">
+        <link rel="stylesheet" type="text/css" href="../styles/content.css">
         <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="/images/favicon2.png">
+        <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="/scripts/navigation_bar.js"></script>
+        <script src="../scripts/navigation_bar.js"></script>
     </head>
 
     <body>
-        <!--------------------------------------------------------------------------------------------->
+        <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
             <ul class="navigation">
-                <li class="navigation"> <a target="_self" href="/pages/social.html">Social Media</a></li>
-                <li class="navigation"> <a target="_self" href="/pages/resume.html" style="font-weight: bolder">Resume</a></li>
-                <li class="navigation"> <a target="_self" href="/pages/experience.html">Experience</a></li>
+                <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">Mail</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
                 <div class="dropdown" style="float: right">
                     <li class="navigation"> 
-                            <a target="_self" href="/pages/projects.html">Projects</a>
+                            <a target="_self" href="../pages/projects.html" style="font-weight: bolder">Projects</a>
                     </li>
                     <div class="dropdown-content">
-                        <a href="/pages/c and c++ projects.html" target="_self">C and C++ Projects</a>
-                        <a href="/pages/python projects.html" target="_self">Python Projects</a>
+                        <a href="../pages/c and c++ projects.html" target="_self">C and C++ Projects</a>
+                        <a href="../pages/python projects.html" target="_self">Python Projects</a>
                     </div>
                 </div>
-                <li class="navigation"> <a target="_self" href="/pages/coursework.html">Coursework</a></li>
-                <li class="navigation"> <a target="_self" href="/pages/home.html">Home</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/home.html">Home</a></li>
                 <li class="navigation" style="float: left"> 
-                        <img src="/images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
+                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
                 <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
-                        <a style="color: white;" href="/pages/home.html" target="_self"> Akshant Jain </a> 
+                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
                 </li>
             </ul>
         </div>
-        <!--------------------------------------------------------------------------------------------->
+
+        <!------------------------------ Header of the page ------------------------------------------->
         <div class="header">    <p>Projects</p>    </div>
-        <!--------------------------------------------------------------------------------------------->
+
+        <!------------------------------ Section in the page ------------------------------------------>
         <div class="section">    <p>UIC Undergraduate Projects (Semester Wise)</p>    </div>
-        <!--------------------------------------------------------------------------------------------->
         <div class="content">
             <p><b>Python Projects: Fall 2017</b></p>
             <ul class="content2">
@@ -64,7 +67,8 @@
                 <li>Coded a program to encode and decode a message inside a sound file using sound bits amplitude according to the ASCII values of the characters.</li>
             </ul>
         </div>
-        <!--------------------------------------------------------------------------------------------->
+        
+        <!------------------------------ Section in the page ------------------------------------------>
         <div class="content" style="background-color: #e2e2e2c9">
             <b>C++ Projects: Spring 2018</b>
             <ul class="content2">
@@ -80,7 +84,8 @@
                 <li>Coded a game using C++ classes and linked list and many more in which 4 Character Robots(A, B, C, D) are placed at a default place with usertype (default, user specified robot and goal, random) goal and then the player has to go to the goal with the specified goal with using and preventing obstacles.</li>
             </ul>
         </div>
-        <!--------------------------------------------------------------------------------------------->
+
+        <!------------------------------ Section in the page ------------------------------------------>
         <div class="content">
             <b>C++, C Projects: Fall 2018</b>
             <ul class="content2">
@@ -98,7 +103,8 @@
                 <li>Coded a program which used two separate linked list classes of different types which used complex communication within classes. The program was able to take a large information from multiple input files and then process to give various information like airports and destination airports, shortest path between two airports and additional basic commands.</li>
             </ul>
         </div>
-        <!--------------------------------------------------------------------------------------------->
+
+        <!------------------------------ Section in the page ------------------------------------------>
         <div class="content" style="background-color: #e2e2e2c9">
             <b>C++, C Projects: Spring 2019</b>
             <ul class="content2">
@@ -125,17 +131,18 @@
             </ul>
 
         </div>
-        <!--------------------------------------------------------------------------------------------->
+
+        <!------------------------------------- Footer of the Page -------------------------------------->
         <div class="footer">
             <p>
-                <a class="mail" href="mailto:akshant.jain2@gmail.com" target="_blank" style="font-size: 12px"> Designed & Built by Akshant Jain</a>
-                <br>
                 <a href="https://www.facebook.com/akshant.jain" target="_blank" class="fa fa-facebook"></a>
                 <a href="https://www.linkedin.com/in/akshant-jain" target="_blank" class="fa fa-linkedin"></a>
                 <a href="https://wa.me/13125610879?text=I'm%20interested%20in%20developing%20a%20site%by%20you." target="_blank" class="fa fa-whatsapp"></a>
                 <a href="https://www.instagram.com/akshant_jain/" target="_blank" class="fa fa-instagram"></a>
                 <a href="akshant-jain" target="_blank" class="fa fa-snapchat-ghost"></a>
                 <a href="https://github.com/Akshantjain" target="_blank" class="fa fa-github"></a>
+                <br>
+                <a class="mail" href="mailto:akshant.jain2@gmail.com" target="_blank" style="font-size: 12px"> Designed & Built by Akshant Jain</a>
             </p>
         </div>
         <!--------------------------------------------------------------------------------------------->
