--- a/pages/home.html
+++ b/pages/home.html
@@ -20,13 +20,34 @@
         <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="../scripts/navigation_bar.js"></script>
-        <script type="text-javascript" src="../scripts/navbarelems.js"></script>
-        <script type="text-javascript" src="../scripts/footerelems.js"></script>
     </head>
 
     <body>
         <!------------------------ Navigation Bar of the website -------------------------------------->
-        <div id="navbar"></div>
+        <div id="navbar">
+            <ul class="navigation">
+                <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">E-mail</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
+                <div class="dropdown" style="float: right">
+                    <li class="navigation"> 
+                            <a target="_self" href="../pages/projects.html">Projects</a>
+                    </li>
+                    <div class="dropdown-content">
+                        <a href="../pages/c and c++ projects.html" target="_self">C and C++ Projects</a>
+                        <a href="../pages/python projects.html" target="_self">Python Projects</a>
+                    </div>
+                </div>
+                <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
+                <li class="navigation"> <a target="_self" href="../pages/home.html" style="font-weight: bolder">Home</a></li>
+                <li class="navigation" style="float: left"> 
+                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
+                </li>
+                <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
+                </li>
+            </ul>
+        </div>
 
         <!------------------------------ Header of the page ------------------------------------------->
         <div class="header">    <p>About Me</p>     </div>
@@ -48,7 +69,18 @@
         </div>
 
         <!------------------------------------- Footer of the Page -------------------------------------->
-        <div class="footer"></div>
+        <div class="footer">
+            <p>
+                <a href="https://www.facebook.com/akshant.jain" target="_blank" class="fa fa-facebook"></a>
+                <a href="https://www.linkedin.com/in/akshant-jain" target="_blank" class="fa fa-linkedin"></a>
+                <a href="https://wa.me/13125610879?text=I'm%20interested%20in%20developing%20a%20site%by%20you." target="_blank" class="fa fa-whatsapp"></a>
+                <a href="https://www.instagram.com/akshant_jain/" target="_blank" class="fa fa-instagram"></a>
+                <a href="akshant-jain" target="_blank" class="fa fa-snapchat-ghost"></a>
+                <a href="https://github.com/Akshantjain" target="_blank" class="fa fa-github"></a>
+                <br>
+                <a class="weblink" href="https://github.com/Akshantjain/my_website" target="_blank" style="font-size: 12px"> Designed & Built by Akshant Jain</a>
+            </p>
+        </div>
         <!--------------------------------------------------------------------------------------------->
     </body>
 </html>
