--- a/pages/python projects.html
+++ b/pages/python projects.html
@@ -26,7 +26,7 @@
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
             <ul class="navigation">
-                <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">Mail</a></li>
+                <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">E-mail</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
                 <div class="dropdown" style="float: right">
