--- a/pages/social.html
+++ b/pages/social.html
@@ -16,10 +16,14 @@
         <link rel="stylesheet" type="text/css" href="../styles/dropdown.css">
         <link rel="stylesheet" type="text/css" href="../styles/template.css">
         <link rel="stylesheet" type="text/css" href="../styles/content.css">
+        <link rel="stylesheet" type="text/css" href="../styles/animate_icon.css">
+        <link rel="stylesheet" type="text/css" href="../styles/side_nav.css">
         <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="../scripts/navigation_bar.js"></script>
+        <script src="../scripts/animate_menu_icon.js"></script>
+        <script src="../scripts/navigation_side.js"></script>
     </head>
 
     <body>
@@ -40,6 +44,13 @@
                 </div>
                 <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/home.html">Home</a></li>
+                <!--li class="navigation" style="float: left">
+                    <div class="container" onclick="openNav(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
+                </li-->
                 <li class="navigation" style="float: left"> 
                         <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
@@ -52,6 +63,13 @@
         <!------------------------------ Header of the page ------------------------------------------->
         <div class="header" style="padding-top: 90px; padding-bottom: 90px;">    <p>Social Media</p>    </div>
 
+        <!--div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div-->
         <!------------------------------------- Footer of the Page -------------------------------------->
         <div class="footer">
             <p>
