media size change

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -106,7 +106,7 @@
                 <a href="akshant-jain" target="_blank" class="fa fa-snapchat-ghost"></a>
                 <a href="https://github.com/Akshantjain" target="_blank" class="fa fa-github"></a>
                 <br>
-                <a class="mail" href="mailto:akshant.jain2@gmail.com" target="_blank" style="font-size: 12px"> Designed & Built by Akshant Jain</a>
+                <a class="weblink" href="mailto:akshant.jain2@gmail.com" target="_blank" style="font-size: 12px"> Designed & Built by Akshant Jain</a>
             </p>
         </div>
         <!--------------------------------------------------------------------------------------------->
