--- a/pages/home.html
+++ b/pages/home.html
@@ -54,7 +54,7 @@
 
         <!------------------------------ Section in the page ------------------------------------------>
         <div class="aboutme">
-            <img src="../images/my_image.jpg">
+            <img src="../images/my_image.jpg" class="abtme">
             <p> <span class="heading" style="font-size: 17px;">Hi! I am Akshant Jain.</span> <br> <br>
                 Pursuing <strong> B.S in Computer Science </strong> along with <strong> Minor in Mathematics </strong> at <i> University of Illinois at Chicago. </i> 
                 I love learning new programming languages and using them to achieve my goals and assignments.
