--- a/pages/projects.html
+++ b/pages/projects.html
@@ -54,7 +54,7 @@
 
         <!------------------------------ Section in the page ------------------------------------------>
         <div class="section">    <p>UIC Undergraduate Projects (Semester Wise)</p>    </div>
-        <div class="content">
+        <div class="content" style="padding-top: 7px">
             <p><b>Python Projects: Fall 2017</b></p>
             <ul class="content2">
                 <li>Project 1. Image Manipulation</li>
