--- a/pages/social.html
+++ b/pages/social.html
@@ -22,8 +22,6 @@
         <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="../scripts/navigation_bar.js"></script>
-        <script src="../scripts/animate_menu_icon.js"></script>
-        <script src="../scripts/navigation_side.js"></script>
     </head>
 
     <body>
@@ -61,7 +59,7 @@
         </div>
 
         <!------------------------------ Header of the page ------------------------------------------->
-        <div class="header" style="padding-top: 90px; padding-bottom: 90px;">    <p>Social Media</p>    </div>
+        <div class="header">    <p>Social Media </p>   </div>
 
         <!--div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
