--- a/pages/resume.html
+++ b/pages/resume.html
@@ -53,7 +53,7 @@
         <div class="section" style="padding-top: 60px;">    <p>Resume</p>    </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="content">
+        <div class="content_resume">
             <!--object width="1000px" height="1130px" data="Akshant Jain_Resume.pdf"></object-->
             <a class="button" target="_blank", href="#"> Download Resume </a>
             <img src="../images/Akshant Jain_Resume.jpg" class="resume">
