--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,15 @@
     <body>
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
-            <ul class="navigation">
+            <ul class="navigation" style="float: left;">
+                <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
+                </li>
+                <li class="navigation"> 
+                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
+                </li>
+            </ul>
+            <ul class="navigation" id="hidenav">
                 <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">E-mail</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
@@ -41,7 +49,7 @@
                 <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/home.html" style="font-weight: bolder">Home</a></li>
                 <li class="navigation" style="float: left"> 
-                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
+                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
                 <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
                         <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
@@ -53,19 +61,25 @@
         <div class="header">    <p>About Me</p>     </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="aboutme">
-            <img src="../images/my_image.jpg" class="abtme">
-            <p> <span class="heading" style="font-size: 17px;">Hi! I am Akshant Jain.</span> <br> <br>
-                Pursuing <strong> B.S in Computer Science </strong> along with <strong> Minor in Mathematics </strong> at <i> University of Illinois at Chicago. </i> 
-                I love learning new programming languages and using them to achieve my goals and assignments.
-            <br>
-            <br>
-                I am an International Student in my Junior year and I have experience in programming languages like 
-                C++, C, Python, Assembly, Java along with software like Microsoft Word, Microsoft Excel, Microsoft Power Point, Adobe Photoshop, Adobe Reader, Unix.
-            <br> 
-            <br>   
-                I am currently looking for Internships and co-op opportunities to gain experience in a working environment.
-            </p>
+        <div class="aboutme" style="align-content: center; font-size: 14px;">
+            <div class="row">
+                <div class="column33">
+                    <img src="../images/my_image.jpg" class="me">
+                </div>
+                <div class="column66">
+                    <p class="intro"> <span class="heading" style="font-size: 17px;">Hi! I am Akshant Jain.</span> <br> <br>
+                        Pursuing <strong> B.S in Computer Science </strong> along with <strong> Minor in Mathematics </strong> at <i> University of Illinois at Chicago. </i> 
+                        I love learning new programming languages and using them to achieve my goals and assignments.
+                    <br>
+                    <br>
+                        I am an International Student in my Junior year and I have experience in programming languages like 
+                        C++, C, Python, Assembly, Java along with software like Microsoft Word, Microsoft Excel, Microsoft Power Point, Adobe Photoshop, Adobe Reader, Unix.
+                    <br> 
+                    <br>   
+                        I am currently looking for Internships and co-op opportunities to gain experience in a working environment.
+                    </p>
+                </div>
+            </div>
         </div>
 
         <!------------------------------------- Footer of the Page -------------------------------------->
