--- a/pages/social.html
+++ b/pages/social.html
@@ -27,7 +27,15 @@
     <body>
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
-            <ul class="navigation">
+            <ul class="navigation" style="float: left;">
+                <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
+                </li>
+                <li class="navigation"> 
+                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
+                </li>
+            </ul>
+            <ul class="navigation" id="hidenav">
                 <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com" style="font-weight: bolder">E-mail</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
@@ -49,12 +57,6 @@
                         <div class="bar3"></div>
                     </div>
                 </li-->
-                <li class="navigation" style="float: left"> 
-                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -6px -15px -10px 12px; padding: 0px -13px;" >
-                </li>
-                <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
-                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
-                </li>
             </ul>
         </div>
 
