navigation content changes

--- a/pages/c and c++ projects.html
+++ b/pages/c and c++ projects.html
@@ -26,10 +26,10 @@
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
             <ul class="navigation" style="float: left;">
-                <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                <li class="navigation" style="letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
                         <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
                 </li>
-                <li class="navigation"> 
+                <li class="navigation" style=" margin-left: 12px;"> 
                         <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
             </ul>
@@ -39,21 +39,15 @@
                 <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
                 <div class="dropdown" style="float: right">
                     <li class="navigation"> 
-                            <a target="_self" href="../pages/projects.html">Projects</a>
+                            <a target="_self" href="../pages/projects.html" style="font-weight: bolder">Projects</a>
                     </li>
                     <div class="dropdown-content">
-                        <a href="../pages/c and c++ projects.html" target="_self">C and C++ Projects</a>
+                        <a href="../pages/c and c++ projects.html" target="_self" style="font-weight: bolder">C and C++ Projects</a>
                         <a href="../pages/python projects.html" target="_self">Python Projects</a>
                     </div>
                 </div>
                 <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
-                <li class="navigation"> <a target="_self" href="../pages/home.html" style="font-weight: bolder">Home</a></li>
-                <li class="navigation" style="float: left"> 
-                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
-                </li>
-                <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
-                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
-                </li>
+                <li class="navigation"> <a target="_self" href="../pages/home.html">Home</a></li>
             </ul>
         </div>
 
