--- a/pages/home.html
+++ b/pages/home.html
@@ -26,10 +26,10 @@
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
             <ul class="navigation" style="float: left;">
-                <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                <li class="navigation" style="letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
                         <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
                 </li>
-                <li class="navigation"> 
+                <li class="navigation" style=" margin-left: 12px;"> 
                         <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
             </ul>
@@ -48,12 +48,6 @@
                 </div>
                 <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
                 <li class="navigation"> <a target="_self" href="../pages/home.html" style="font-weight: bolder">Home</a></li>
-                <li class="navigation" style="float: left"> 
-                        <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
-                </li>
-                <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
-                        <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
-                </li>
             </ul>
         </div>
 
