--- a/pages/resume.html
+++ b/pages/resume.html
@@ -26,16 +26,16 @@
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
                 <ul class="navigation" style="float: left;">
-                    <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                    <li class="navigation" style="letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
                             <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
                     </li>
-                    <li class="navigation"> 
+                    <li class="navigation" style=" margin-left: 12px;"> 
                             <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
                     </li>
                 </ul>
                 <ul class="navigation" id="hidenav">
                     <li class="navigation"> <a target="_self" href="mailto:akshant.jain2@gmail.com">E-mail</a></li>
-                    <li class="navigation"> <a target="_self" href="../pages/resume.html">Resume</a></li>
+                    <li class="navigation"> <a target="_self" href="../pages/resume.html" style="font-weight: bolder">Resume</a></li>
                     <li class="navigation"> <a target="_self" href="../pages/experience.html">Experience</a></li>
                     <div class="dropdown" style="float: right">
                         <li class="navigation"> 
@@ -47,13 +47,7 @@
                         </div>
                     </div>
                     <li class="navigation"> <a target="_self" href="../pages/coursework.html">Coursework</a></li>
-                    <li class="navigation"> <a target="_self" href="../pages/home.html" style="font-weight: bolder">Home</a></li>
-                    <li class="navigation" style="float: left"> 
-                            <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
-                    </li>
-                    <li class="navigation" style="float: left; letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
-                            <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
-                    </li>
+                    <li class="navigation"> <a target="_self" href="../pages/home.html">Home</a></li>
                 </ul>
             </div>
 
