--- a/pages/social.html
+++ b/pages/social.html
@@ -28,10 +28,10 @@
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar">
             <ul class="navigation" style="float: left;">
-                <li class="navigation" letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
+                <li class="navigation" style="letter-spacing: 1.8px; color: white; font-size: 20px; font-family: tahoma; font-weight: 530;"> 
                         <a style="color: white;" href="../pages/home.html" target="_self"> Akshant Jain </a> 
                 </li>
-                <li class="navigation"> 
+                <li class="navigation" style=" margin-left: 12px;"> 
                         <img src="../images/favicon2.png" style="width: 43px; height: 39px; margin: -9px -15px -10px 12px; padding: 0px -13px;" >
                 </li>
             </ul>
