--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="../styles/dropdown.css">
         <link rel="stylesheet" type="text/css" href="../styles/template.css">
         <link rel="stylesheet" type="text/css" href="../styles/content.css">
+        <link rel="stylesheet" type="text/css" href="../styles/animate_icon.css">
         <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,16 +24,16 @@
         <script src="../scripts/navigation_side.js"></script>
     </head>
 
-    <body>
+    <body id="mybody">
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar" class="navbar">
-            <div class="container" style="float: left;" onclick="myFunction(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-            <a href="#default" class="logo" style="color: white;"> <img src="../images/favicon2.png"> Akshant Jain</a>
-            <div id="navbar-right">
+            <div id="cont" class="container" style="float: left;" onclick="myFunction(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            <a href="#default" class="logo" style="color: white; cursor: default"> <img src="../images/favicon2.png"> Akshant Jain</a>
+            <div id="navbar-right" class="fixed">
                 <a target="_self" href="../pages/home.html">Home</a>
                 <a target="_self" href="../pages/coursework.html">Coursework</a>
                 <a target="_self" href="../pages/projects.html">Projects</a>
